cabal-version:      2.4
name:               servant-rawm-repro
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Julian Ospald
maintainer:         hasufell@posteo.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable servant-rawm-repro
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , base                 ^>=4.14.3.0
    , bytestring
    , exceptions
    , jose
    , mtl
    , optics
    , servant
    , servant-auth
    , servant-auth-server
    , servant-server
    , text
    , time
    , transformers
    , wai
    , warp
    , x509
    , x509-store

  hs-source-dirs:   app
  default-language: Haskell2010
